feat 1.migrate to fabric_1.20.6